[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioreq"
dynamic = ["version"]
requires-python = ">=3.7"
description = "Asynchronous HTTP library."
readme = "README.md"
license-files = { paths = ["LICENSE"]}

dependencies = [
    "rfcparser",
    "dnspython",
    "lark"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/karosis88/aioerq"
Source = "https://github.com/karosis88/aioreq"

[project.optional-dependencies]

dev = [
    "hatch",
    "httpx",
    "fastapi",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
    "tox",
    "mkdocs-material",
]

uvloop = [
    "uvloop",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.hatch.version]
path = "aioreq/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/aioreq",
]
